[package]
name = "raptorq-differential"
version = "0.1.0"
edition = "2021"
description = "Differential testing framework for RaptorQ RFC 6330 conformance"
authors = ["Asupersync Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"